Fix #2957 Timeline bug fixes (#2959)
* Fix #2957 Timeline bug fixes

Firstly, the react-virtuoso library was updated to version 4.4.2 for improved performance. This active management of dependencies ensures the application is using the latest available solutions for enhanced functionality.

Secondly, modifications were made to the styling properties of several components. For instance, in EmailPreviewModal, the 'backdrop' class was moved inside a new 'container' class to solve a layout problem. The card component's z-index was also increased.

In files such as TimelineItem and SocialInput, styling adjustments were made to improve UI presentation. In ComposeEmail file, the unused upload button was commented out for cleaner code.

Overall, these changes improve user experience by enhancing table responsiveness and interface design.

* chore: run yarn

* fix #2958: fixed lagging behaviour on timeline

* chore: Revert using common organziation hook in about panel

--- a/packages/apps/spaces/app/organizations/[id]/components/Timeline/events/email/EmailPreviewModal.module.scss
+++ b/packages/apps/spaces/app/organizations/[id]/components/Timeline/events/email/EmailPreviewModal.module.scss
@@ -1,3 +1,14 @@
+.container {
+  position:absolute;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding: 2rem;
+
+}
+
 .backdrop {
   position:absolute;
   z-index: 6;
@@ -7,7 +18,6 @@
   left: 0;
   backdrop-filter: blur(12px);
   background: rgb(16 24 40 / 45%);
-  padding: 2rem;
   border-radius: 16px;
 }
 
